--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@ is $175.00 an hour)</td>
 </table>
 </div>
 </div>
+<div>
+<p><i><strong>Please note:</strong>RR Aggregate, LLC makes no representation as to the suitability of the material for the project. Customer may request material samples for independent testing that is coordinated by Customer and provided at Customer's expense. RR Aggregate, LLC will provide prior testing results to customer upon customer's request.</i></p>
+</div>
 
     </div>
 
